# Gruha-Alankara

./: .gitignore  app.py  config.py  generate_missing_assets.py  generate_placeholders.py  project_report.md  pyproject.toml  requirements.txt  seed_db.py  vercel.json
models/: __init__.py  design_model.py  recommendation_model.py
static/css/: animations.css  dashboard.css  shopping-style.css  style.css
static/js/: ar-viewer.js  design-recommendations.js  main.js  particles.js  three-ar.js
templates/: ar-viewer.html  base.html  dashboard.html  design-recommendations.html  index.html  login.html  room-analysis.html
utils/: __init__.py  ai_recommendations.py  ar_helper.py  room_analyzer.py
