[project]
name = "app"
version = "0.1.0"
dependencies = [ "flask==2.3.3", "flask-login==0.6.2", "flask-sqlalchemy==3.0.5", "flask-wtf==1.1.1", "pillow==10.0.0", "numpy==1.26.4", "opencv-python==4.10.0.84", "scikit-learn==1.4.2", "werkzeug==2.3.7", "python-dotenv==1.0.0", "fastapi==0.117.1", "psycopg2-binary==2.9.10" ]
requires-python = "~=3.12.0"
